syntax = "proto3";

package com.coralogix.outgoing_webhooks.v1;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

enum WebhookType {
  UNKNOWN = 0;
  GENERIC = 1;
  SLACK = 2;
  PAGERDUTY = 3;
  SEND_LOG = 4;
  EMAIL_GROUP = 5;
  MICROSOFT_TEAMS = 6;
  JIRA = 7;
  OPSGENIE = 8;
  DEMISTO = 9;
  AWS_EVENT_BRIDGE = 10;
  IBM_EVENT_NOTIFICATIONS = 11;
  MS_TEAMS_WORKFLOW = 12;
}

message GenericWebhookConfig {
  enum MethodType {
    UNKNOWN = 0;
    GET = 1;
    POST = 2;
    PUT = 3;
  }

  google.protobuf.StringValue uuid = 1;
  MethodType method = 2;
  map<string, string> headers = 3;
  google.protobuf.StringValue payload = 4;
}
message SlackConfig {
  enum DigestType {
    UNKNOWN = 0;
    ERROR_AND_CRITICAL_LOGS = 1;
    FLOW_ANOMALIES = 2;
    SPIKE_ANOMALIES = 3;
    DATA_USAGE = 4;
  }

  enum AttachmentType {
    EMPTY = 0;
    METRIC_SNAPSHOT = 1;
    LOGS = 2;
  }

  message Digest {
    DigestType type = 1;
    google.protobuf.BoolValue is_active = 2;
  }

  message Attachment {
    AttachmentType type = 1;
    google.protobuf.BoolValue is_active = 2;
  }

  repeated Digest digests = 1;
  repeated Attachment attachments = 2;
}

message PagerDutyConfig {
  google.protobuf.StringValue service_key = 1;
}
message SendLogConfig {
  google.protobuf.StringValue uuid = 1;
  google.protobuf.StringValue payload = 2;
}
message EmailGroupConfig {
  repeated google.protobuf.StringValue email_addresses = 1;
}
message MicrosoftTeamsConfig {}
message MSTeamsWorkflowConfig {}
message JiraConfig {
  google.protobuf.StringValue api_token = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue project_key = 3;
}
message OpsgenieConfig {}
message DemistoConfig {
  google.protobuf.StringValue uuid = 1;
  google.protobuf.StringValue payload = 2;
}
message AwsEventBridgeConfig {
  reserved 5;
  reserved "region"; // Region was deprecated, as it could be inferred from the event bus arn.

  google.protobuf.StringValue event_bus_arn = 1;
  google.protobuf.StringValue detail = 2;
  google.protobuf.StringValue detail_type = 3;
  google.protobuf.StringValue source = 4;
  google.protobuf.StringValue role_name = 6;
}

message IbmEventNotificationsConfig {

  enum EndpointType {
    ENDPOINT_TYPE_DEFAULT_OR_PUBLIC = 0;
    ENDPOINT_TYPE_PRIVATE = 1;
  }

  google.protobuf.StringValue event_notifications_instance_id = 1;
  google.protobuf.StringValue region_id = 2;
  google.protobuf.StringValue source_id = 3;
  google.protobuf.StringValue source_name = 4;
  EndpointType endpoint_type = 5;
}

message OutgoingWebhook {
  google.protobuf.StringValue id = 1;
  WebhookType type = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue url = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.UInt32Value external_id = 7;
  oneof config {
    GenericWebhookConfig generic_webhook = 100;
    SlackConfig slack = 101;
    PagerDutyConfig pager_duty = 102;
    SendLogConfig send_log = 103;
    EmailGroupConfig email_group = 104;
    MicrosoftTeamsConfig microsoft_teams = 105;
    JiraConfig jira = 106;
    OpsgenieConfig opsgenie = 107;
    DemistoConfig demisto = 108;
    AwsEventBridgeConfig aws_event_bridge = 109;
    IbmEventNotificationsConfig ibm_event_notifications = 110;
    MSTeamsWorkflowConfig ms_teams_workflow = 111;
  }
}

message OutgoingWebhookInputData {
  WebhookType type = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue url = 3;
  oneof config {
    GenericWebhookConfig generic_webhook = 100;
    SlackConfig slack = 101;
    PagerDutyConfig pager_duty = 102;
    SendLogConfig send_log = 103;
    EmailGroupConfig email_group = 104;
    MicrosoftTeamsConfig microsoft_teams = 105;
    JiraConfig jira = 106;
    OpsgenieConfig opsgenie = 107;
    DemistoConfig demisto = 108;
    AwsEventBridgeConfig aws_event_bridge = 109;
    IbmEventNotificationsConfig ibm_event_notifications = 110;
    MSTeamsWorkflowConfig ms_teams_workflow = 111;
  }
}

message OutgoingWebhookSummary {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue url = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.UInt32Value external_id = 6;
}

message OutgoingWebhookExtendedSummary {
  google.protobuf.StringValue id = 1;
  WebhookType type = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.StringValue url = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.UInt32Value external_id = 7;
}

message OutgoingWebhookDetails {
  WebhookType type = 1;
  google.protobuf.StringValue label = 2;
}

message OutboundWebhookSummary{
  google.protobuf.StringValue id = 1;
  WebhookType type = 2;
  google.protobuf.StringValue name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.UInt32Value external_id = 6;
}
