syntax = "proto3";

package com.coralogix.outgoing_webhooks.v1;

import "com/coralogix/outgoing_webhooks/v1/audit_log.proto";
import "com/coralogix/outgoing_webhooks/v1/outgoing_webhook.proto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service OutgoingWebhooksService {
  rpc ListOutgoingWebhookTypes(ListOutgoingWebhookTypesRequest) returns (ListOutgoingWebhookTypesResponse) {
    option (audit_log_description).description = "Get outgoing webhook types";
    option (google.api.http) = {
      get: "/v1/outgoing_webhooks/types"
    };
  }

  rpc GetOutgoingWebhookTypeDetails(GetOutgoingWebhookTypeDetailsRequest) returns (GetOutgoingWebhookTypeDetailsResponse) {
    option (audit_log_description).description = "Get outgoing webhook type";
    option (google.api.http) = {
      get: "/v1/outgoing_webhooks/types/{type}"
    };
  }

  rpc ListOutgoingWebhooks(ListOutgoingWebhooksRequest) returns (ListOutgoingWebhooksResponse) {
    option (audit_log_description).description = "Get outgoing webhooks";
    option (google.api.http) = {
      get: "/v1/outgoing_webhooks"
    };
  }

  rpc ListOutboundWebhooksSummary(ListOutboundWebhooksSummaryRequest) returns (ListOutboundWebhooksSummaryResponse) {
    option (audit_log_description).description = "Get outgoing webhook summaries";
    option (google.api.http) = {
      get: "/v1/outgoing_webhooks/summaries"
    };
  }

  rpc ListAllOutgoingWebhooks(ListAllOutgoingWebhooksRequest) returns (ListAllOutgoingWebhooksResponse) {
    option (audit_log_description).description = "Get all outgoing webhooks";
    option (google.api.http) = {
      get: "/v1/outgoing_webhooks/all"
    };
  }

  rpc GetOutgoingWebhook(GetOutgoingWebhookRequest) returns (GetOutgoingWebhookResponse) {
    option (audit_log_description).description = "Get outgoing webhook";
    option (google.api.http) = {
      get: "/v1/outgoing_webhooks/{id}"
    };
  }

  rpc CreateOutgoingWebhook(CreateOutgoingWebhookRequest) returns (CreateOutgoingWebhookResponse) {
    option (audit_log_description).description = "Create an outgoing webhook";
    option (google.api.http) = {
      post: "/v1/outgoing_webhooks"
      body: "*"
    };
  }

  rpc UpdateOutgoingWebhook(UpdateOutgoingWebhookRequest) returns (UpdateOutgoingWebhookResponse) {
    option (audit_log_description).description = "Update an outgoing webhook";
    option (google.api.http) = {
      put: "/v1/outgoing_webhooks"
      body: "*"
    };
  }

  rpc DeleteOutgoingWebhook(DeleteOutgoingWebhookRequest) returns (DeleteOutgoingWebhookResponse) {
    option (audit_log_description).description = "Delete an outgoing webhook";
    option (google.api.http) = {
      delete: "/v1/outgoing_webhooks/{id}"
    };
  }

  rpc TestOutgoingWebhook(TestOutgoingWebhookRequest) returns (TestOutgoingWebhookResponse) {
    option (audit_log_description).description = "Test an outgoing webhook";
    option (google.api.http) = {
      post: "/v1/outgoing_webhooks/test"
      body: "*"
    };
  }

  rpc TestExistingOutgoingWebhook(TestExistingOutgoingWebhookRequest) returns (TestOutgoingWebhookResponse) {
    option (audit_log_description).description = "Test an existing outgoing webhook";
    option (google.api.http) = {
      post: "/v1/outgoing_webhooks/test_existing"
      body: "*"
    };
  }

  rpc ListIbmEventNotificationsInstances(ListIbmEventNotificationsInstancesRequest) returns (ListIbmEventNotificationsInstancesResponse) {
    option (google.api.http) = {
      get: "/v1/outgoing_webhooks/ibm_event_notifications/instances"
    };
  }
}

message ListOutgoingWebhookTypesRequest {}
message ListOutgoingWebhookTypesResponse {
  message OutgoingWebhookType {
    WebhookType type = 1;
    google.protobuf.StringValue label = 2;
    google.protobuf.UInt32Value count = 3;
  }

  repeated OutgoingWebhookType webhooks = 1;
}

message GetOutgoingWebhookTypeDetailsRequest {
  WebhookType type = 1;
}
message GetOutgoingWebhookTypeDetailsResponse {
  OutgoingWebhookDetails details = 1;
}

message ListOutgoingWebhooksRequest {
  WebhookType type = 1;
}
message ListOutgoingWebhooksResponse {
  repeated OutgoingWebhookSummary deployed = 1;
}

message ListAllOutgoingWebhooksRequest {}
message ListAllOutgoingWebhooksResponse {
  repeated OutgoingWebhookExtendedSummary deployed = 1;
}

message ListOutboundWebhooksSummaryRequest {}
message ListOutboundWebhooksSummaryResponse {
  repeated OutboundWebhookSummary outbound_webhook_summaries = 1;
}

message GetOutgoingWebhookRequest {
  google.protobuf.StringValue id = 1;
}
message GetOutgoingWebhookResponse {
  OutgoingWebhook webhook = 1;
}

message CreateOutgoingWebhookRequest {
  OutgoingWebhookInputData data = 1;
}
message CreateOutgoingWebhookResponse {
  google.protobuf.StringValue id = 1;
}

message UpdateOutgoingWebhookRequest {
  string id = 1;
  OutgoingWebhookInputData data = 2;
}
message UpdateOutgoingWebhookResponse {}

message DeleteOutgoingWebhookRequest {
  google.protobuf.StringValue id = 1;
}
message DeleteOutgoingWebhookResponse {}

message TestOutgoingWebhookRequest {
  OutgoingWebhookInputData data = 1;
}
message TestExistingOutgoingWebhookRequest {
  google.protobuf.StringValue id = 1;
}
message TestOutgoingWebhookResponse {
  message Success {}
  message Failure {
    google.protobuf.StringValue error_message = 1;
    google.protobuf.StringValue display_message = 2;
    optional google.protobuf.UInt32Value status_code = 3;
  }

  oneof result {
    Success success = 1;
    Failure failure = 2;
  }
}

message ListIbmEventNotificationsInstancesRequest {}
message ListIbmEventNotificationsInstancesResponse {
  message EventNotificationsInstance {
    string instance_id = 1;
    string region_id = 2;
    string name = 3;
    string crn = 4; // Cloud Resource Name
    bool is_used = 5;
  }

  repeated EventNotificationsInstance instances = 1;
}
